2011-05-29  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/ext/wallpaper.jl: added option to pass extra
	arguements to wallpaper-setter

	* lisp/sawfish/wm/widgets/image.jl
	* lisp/sawfish/wm/widgets/file.jl: better widget-layouts

2011-05-28  Jeremy Hankins <nowan@nowan.org>
	* lisp/sawfish/wm/edge/flip.jl
	* lisp/sawfish/wm/edge/hot-spots.jl: EF/HS/HM timers are no
	longer started if a timer is already running; fixes bug where
	flip-viewport would jump multiple viewports.

2011-05-28  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/gtk/widgets/file.jl: ported 'file widget to
	gtk-file-chooser-button

	* lisp/sawfish/gtk/widgets/image.jl: improved 'image widget

	* lisp/Makefile.in: don't install wallpaper.jlc (breaks 'image and
	'file widgets (...))

	* lisp/sawfish/wm/ext/wallpaper.jl: added integration of wallpaper
	settings (also gnome2 and xfce4 if desired), original module by Lucas
	Pandolfo and heavily modified by me

2011-05-25  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/gtk/widgets/image.jl: added image-widget for
	sawfish-config (contains preview and selector), original widget by
	Lucas Pandolfo and heavily modified by me

	* lisp/sawfish/gtk/Makefile.in: updated

	* configure.in: bump minimum rep-gtk to 0.90.7 (new funcs required by
	image widget)

2011-05-22  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/frames.jl: fixed setting frame-font colors for
	states inactive-highlighted and inactive-clicked

	* themes/get-S-tabbed/theme.jl
	* themes/Crux/theme.jl
	* themes/mxflat/theme.jl
	* src/frames.c
	* src/sawfish_subrs.h
	* lisp/sawfish/wm/frames.jl: remove frame-font, fallback to
	default-font again. Instead offer options for changing frame-font
	according to the window state.

	* lisp/sawfish/wm/frames.jl: added option to adjust border-width and
	border-color options.

	* lisp/sawfish/wm/user.jl: load frame-font and border-width/color
	options on startup
