@@ -5,6 +5,8 @@
 	* lisp/sawfish/wm/widgets/image.jl
 	* lisp/sawfish/wm/widgets/file.jl: better widget-layouts
 
+	* debian/rules: updated
+
 2011-05-28  Jeremy Hankins <nowan@nowan.org>
 	* lisp/sawfish/wm/edge/flip.jl
 	* lisp/sawfish/wm/edge/hot-spots.jl: EF/HS/HM timers are no
